# videochanger

./: .gitignore  CMakeLists.txt  README.md  imgInfo.h  main  vidInfo.h  videochanger.cpp
hdrs/: imgInfo.h  vidInfo.h
src/: imgInfo.cpp  vidInfo.cpp  videochanger.cpp
